<resources>
    <string name="app_name">SIIBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">Main</string>
    <string name="title_about">About</string>
    <string name="others">Plus</string>

    <!-- drawer menu -->
    <string name="home">Accueil</string>
    <string name="meetingroom">Salle Réunion</string>
    <string name="chat">Discussion</string>
    <string name="setting">Paramètre</string>
    <string name="contactus">Contactez-nous</string>
    <string name="about">À propos</string>
    <string name="logout">Déconnexion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
