<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_meetingroom"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/meetingroom" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/setting" />

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_contactus"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/contactus" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
